5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1675_2167.log
== TEST (2019-05-09 17:11:05) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida-e-volta? Sim ou Nao: ").upper()

if(n == "BELEM"):
	if(m == "SIM"):
		print(650.0)
	else:
		print(350.0)
elif(n == "BORBA"):
	if(m == "SIM"):
		print(152.0)
	elif:
		print(80.0)
elif(n == "COARI"):
	if(m == "SIM"):
		print(199.0)
	else:
		print(106.0)
elif(n == "HUMAITA"):
	if(m == "SIM"):
		print(390.0)
	else:
		print(200.0)
elif(n == "MANICORE"):
	if(m == "SIM"):
		print(280.0)
	else:
		print(150.0)
elif(n == "MAUES"):
	if(m == "SIM"):
		print(190.0)
	else:
		print(100.0)
else:
	print("Destino inexistente")
-- ERROR:
File "XXXX", line 12
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:11:37) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida-e-volta? Sim ou Nao: ").upper()

if(n == "BELEM"):
	if(m == "SIM"):
		print(650.0)
	else:
		print(350.0)
elif(n == "BORBA"):
	if(m == "SIM"):
		print(152.0)
	else:
		print(80.0)
elif(n == "COARI"):
	if(m == "SIM"):
		print(199.0)
	else:
		print(106.0)
elif(n == "HUMAITA"):
	if(m == "SIM"):
		print(390.0)
	else:
		print(200.0)
elif(n == "MANICORE"):
	if(m == "SIM"):
		print(280.0)
	else:
		print(150.0)
elif(n == "MAUES"):
	if(m == "SIM"):
		print(190.0)
	else:
		print(100.0)
else:
	print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:12:26) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida-e-volta? Sim ou Nao: ").upper()

if(n == "BELEM"):
	if(m == "SIM"):
		print(650.0)
	else:
		print(350.0)
elif(n == "BORBA"):
	if(m == "SIM"):
		print(152.0)
	else:
		print(80.0)
elif(n == "COARI"):
	if(m == "SIM"):
		print(199.0)
	else:
		print(106.0)
elif(n == "HUMAITA"):
	if(m == "SIM"):
		print(390.0)
	else:
		print(200.0)
elif(n == "MANICORE"):
	if(m == "SIM"):
		print(280.0)
	else:
		print(150.0)
elif(n == "MAUES"):
	if(m == "SIM"):
		print(190.0)
	else:
		print(100.0)
else:
	print("Destino inexistente")
-- EXECUTION TIME:
0.21099
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:13:31) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida-e-volta? Sim ou Nao: ").upper()

if(n == "BELEM"):
	if(m == "SIM"):
		print(650.00)
	else:
		print(350.00)
elif(n == "BORBA"):
	if(m == "SIM"):
		print(152.00)
	else:
		print(80.00)
elif(n == "COARI"):
	if(m == "SIM"):
		print(199.00)
	else:
		print(106.00)
elif(n == "HUMAITA"):
	if(m == "SIM"):
		print(390.00)
	else:
		print(200.00)
elif(n == "MANICORE"):
	if(m == "SIM"):
		print(280.00)
	else:
		print(150.00)
elif(n == "MAUES"):
	if(m == "SIM"):
		print(190.00)
	else:
		print(100.00)
else:
	print("Destino inexistente")
-- EXECUTION TIME:
0.134648
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:16:46) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida-e-volta? Sim ou Nao: ").upper()

if(n == "BELEM"):
	if(m == "SIM"):
		print(650.00)
	else:
		print(350.00)
elif(n == "BORBA"):
	if(m == "SIM"):
		print(152.00)
	else:
		print(80.00)
elif(n == "COARI"):
	if(m == "SIM"):
		print(199.00)
	else:
		print(106.00)
elif(n == "HUMAITA"):
	if(m == "SIM"):
		print(390.00)
	else:
		print(200.00)
elif(n == "MANICORE"):
	if(m == "SIM"):
		print(280.00)
	else:
		print(150.00)
elif(n == "MAUES"):
	if(m == "SIM"):
		print(190.00)
	else:
		print(100.00)
else:
	print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:17:07) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida-e-volta? Sim ou Nao: ").upper()

if(n == "BELEM"):
	if(m == "SIM"):
		print(650.00)
	else:
		print(350.00)
elif(n == "BORBA"):
	if(m == "SIM"):
		print(152.00)
	else:
		print(80.00)
elif(n == "COARI"):
	if(m == "SIM"):
		print(199.00)
	else:
		print(106.00)
elif(n == "HUMAITA"):
	if(m == "SIM"):
		print(390.00)
	else:
		print(200.00)
elif(n == "MANICORE"):
	if(m == "SIM"):
		print(280.00)
	else:
		print(150.00)
elif(n == "MAUES"):
	if(m == "SIM"):
		print(190.00)
	else:
		print(100.00)
else:
	print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:17:18) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida-e-volta? Sim ou Nao: ").upper()

if(n == "BELEM"):
	if(m == "SIM"):
		print(650.00)
	else:
		print(350.00)
elif(n == "BORBA"):
	if(m == "SIM"):
		print(152.00)
	else:
		print(80.00)
elif(n == "COARI"):
	if(m == "SIM"):
		print(199.00)
	else:
		print(106.00)
elif(n == "HUMAITA"):
	if(m == "SIM"):
		print(390.00)
	else:
		print(200.00)
elif(n == "MANICORE"):
	if(m == "SIM"):
		print(280.00)
	else:
		print(150.00)
elif(n == "MAUES"):
	if(m == "SIM"):
		print(190.00)
	else:
		print(100.00)
else:
	print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:36:04) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida-e-volta? Sim ou Nao: ").upper()

if(n == "BELEM"):
	if(m == "SIM"):
		print(650.00)
	else:
		print(350.00)
elif(n == "BORBA"):
	if(m == "SIM"):
		print(152.00)
	else:
		print(80.00)
elif(n == "COARI"):
	if(m == "SIM"):
		print(199.00)
	else:
		print(106.00)
elif(n == "HUMAITA"):
	if(m == "SIM"):
		print(390.00)
	else:
		print(200.00)
elif(n == "MANICORE"):
	if(m == "SIM"):
		print(280.00)
	else:
		print(150.00)
elif(n == "MAUES"):
	if(m == "SIM"):
		print(190.00)
	else:
		print(100.00)
else:
	print("Destino inexistente")
-- EXECUTION TIME:
0.164413
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:36:07) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida-e-volta? Sim ou Nao: ").upper()

if(n == "BELEM"):
	if(m == "SIM"):
		print(650.00)
	else:
		print(350.00)
elif(n == "BORBA"):
	if(m == "SIM"):
		print(152.00)
	else:
		print(80.00)
elif(n == "COARI"):
	if(m == "SIM"):
		print(199.00)
	else:
		print(106.00)
elif(n == "HUMAITA"):
	if(m == "SIM"):
		print(390.00)
	else:
		print(200.00)
elif(n == "MANICORE"):
	if(m == "SIM"):
		print(280.00)
	else:
		print(150.00)
elif(n == "MAUES"):
	if(m == "SIM"):
		print(190.00)
	else:
		print(100.00)
else:
	print("Destino inexistente")
-- EXECUTION TIME:
0.102791
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:36:09) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida-e-volta? Sim ou Nao: ").upper()

if(n == "BELEM"):
	if(m == "SIM"):
		print(650.00)
	else:
		print(350.00)
elif(n == "BORBA"):
	if(m == "SIM"):
		print(152.00)
	else:
		print(80.00)
elif(n == "COARI"):
	if(m == "SIM"):
		print(199.00)
	else:
		print(106.00)
elif(n == "HUMAITA"):
	if(m == "SIM"):
		print(390.00)
	else:
		print(200.00)
elif(n == "MANICORE"):
	if(m == "SIM"):
		print(280.00)
	else:
		print(150.00)
elif(n == "MAUES"):
	if(m == "SIM"):
		print(190.00)
	else:
		print(100.00)
else:
	print("Destino inexistente")
-- EXECUTION TIME:
0.138113
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:36:11) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida-e-volta? Sim ou Nao: ").upper()

if(n == "BELEM"):
	if(m == "SIM"):
		print(650.00)
	else:
		print(350.00)
elif(n == "BORBA"):
	if(m == "SIM"):
		print(152.00)
	else:
		print(80.00)
elif(n == "COARI"):
	if(m == "SIM"):
		print(199.00)
	else:
		print(106.00)
elif(n == "HUMAITA"):
	if(m == "SIM"):
		print(390.00)
	else:
		print(200.00)
elif(n == "MANICORE"):
	if(m == "SIM"):
		print(280.00)
	else:
		print(150.00)
elif(n == "MAUES"):
	if(m == "SIM"):
		print(190.00)
	else:
		print(100.00)
else:
	print("Destino inexistente")
-- EXECUTION TIME:
0.180347
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
nome da cidade de destino: ida-e-volta? Sim ou Nao: Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
nome da cidade de destino: ida-e-volta? Sim ou Nao: 200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
nome da cidade de destino: ida-e-volta? Sim ou Nao: 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 20:33:15) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida-e-volta? Sim ou Nao: ").upper()

if(n == "BELEM"):
	if(m == "SIM"):
		print(650.00)
	else:
		print(350.00)
elif(n == "BORBA"):
	if(m == "SIM"):
		print(152.00)
	else:
		print(80.00)
elif(n == "COARI"):
	if(m == "SIM"):
		print(199.00)
	else:
		print(106.00)
elif(n == "HUMAITA"):
	if(m == "SIM"):
		print(390.00)
	else:
		print(200.00)
elif(n == "MANICORE"):
	if(m == "SIM"):
		print(280.00)
	else:
		print(150.00)
elif(n == "MAUES"):
	if(m == "SIM"):
		print(190.00)
	else:
		print(100.00)
else:
	print("Destino inexistente")
-- EXECUTION TIME:
0.133064
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 20:37:21) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida ou ida-e-volta: ").upper()

if(n == "BELEM"):
	if(m == "IDA"):
		print(650.00)
	else:
		print(350.00)
elif(n == "BORBA"):
	if(m == "IDA"):
		print(152.00)
	else:
		print(80.00)
elif(n == "COARI"):
	if(m == "IDA"):
		print(199.00)
	else:
		print(106.00)
elif(n == "HUMAITA"):
	if(m == "IDA"):
		print(390.00)
	else:
		print(200.00)
elif(n == "MANICORE"):
	if(m == "IDA"):
		print(280.00)
	else:
		print(150.00)
elif(n == "MAUES"):
	if(m == "IDA"):
		print(190.00)
	else:
		print(100.00)
else:
	print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 20:42:22) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida ou ida-e-volta: ").upper()

if(n == "BELEM"):
	if(m == "IDA"):
		print("350.0")
	else:
		print("650.0")
elif(n == "BORBA"):
	if(m == "IDA"):
		print("80.0")
	else:
		print("152.0")
elif(n == "COARI"):
	if(m == "IDA"):
		print("106.0")
	else:
		print("199.0")
elif(n == "HUMAITA"):
	if(m == "IDA"):
		print("200.0")
	else:
		print("390.0")
elif(n == "MANICORE"):
	if(m == "IDA"):
		print("150.0")
	else:
		print("280.0")
elif(n == "MAUES"):
	if(m == "IDA"):
		print("100.0")
	else:
		print("190.0")
else:
	print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 20:42:49) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida ou ida-e-volta: ").upper()

if(n == "BELEM"):
	if(m == "IDA"):
		print("350.0")
	else:
		print("650.0")
elif(n == "BORBA"):
	if(m == "IDA"):
		print("80.0")
	else:
		print("152.0")
elif(n == "COARI"):
	if(m == "IDA"):
		print("106.0")
	else:
		print("199.0")
elif(n == "HUMAITA"):
	if(m == "IDA"):
		print("200.0")
	else:
		print("390.0")
elif(n == "MANICORE"):
	if(m == "IDA"):
		print("150.0")
	else:
		print("280.0")
elif(n == "MAUES"):
	if(m == "IDA"):
		print("100.0")
	else:
		print("190.0")
else:
	print("Destino inexistente")
-- EXECUTION TIME:
0.208766
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
190.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 20:53:00) 
-- CODE:
n = input("nome da cidade de destino: ").upper()
m = input("ida ou ida-e-volta: ").upper()

if(n == "BELEM"):
	if(m == "IDA"):
		print("350.0")
	else:
		print("650.0")
elif(n == "BORBA"):
	if(m == "IDA"):
		print("80.0")
	else:
		print("152.0")
elif(n == "COARI"):
	if(m == "IDA"):
		print("106.0")
	else:
		print("199.0")
elif(n == "HUMAITA"):
	if(m == "IDA"):
		print("200.0")
	else:
		print("390.0")
elif(n == "MANICORE"):
	if(m == "IDA"):
		print("150.0")
	else:
		print("280.0")
elif(n == "MAUES"):
	if(m == "IDA"):
		print("100.0")
	else:
		print("190.0")
else:
	print("Destino inexistente")
-- EXECUTION TIME:
0.15838
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
200.0
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:
190.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
